--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header>
         <a href="#" class="logo">
-            <span>Audio</span>
+            <span>Diego</span>
             Diego
         </a>
 
